<!--
  ~ Copyright 2014 The Language Application Grid
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.lappsgrid</groupId>
  <artifactId>nltk_tagger</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>war</packaging>
  <name>NLTK Tagger Example</name>
  <description>
      Lapps Web Services wrapping example for Stanford NLP Tagger
  </description>

    <properties>
        <lapps.version>1.0.1</lapps.version>
        <lapps.core.version>1.2.0</lapps.core.version>
        <lapps.discriminator>1.2.3</lapps.discriminator>
        <lapps.util>1.0.0</lapps.util>
        <vocabulary.version>0.9.4</vocabulary.version>
        <serialization.version>0.13.0-SNAPSHOT</serialization.version>
        <anc.common>3.4.0</anc.common>
    </properties>

  <dependencies>
      <!-- LappsGrid dependencies -->
      <dependency>
          <groupId>org.lappsgrid</groupId>
          <artifactId>api</artifactId>
          <version>${lapps.version}</version>
      </dependency>

      <dependency>
          <groupId>org.lappsgrid</groupId>
          <artifactId>core</artifactId>
          <version>${lapps.core.version}</version>
      </dependency>
      <dependency>
          <groupId>org.lappsgrid</groupId>
          <artifactId>discriminator</artifactId>
          <version>${lapps.discriminator}</version>
      </dependency>
      <dependency>
          <groupId>org.anc.lapps</groupId>
          <artifactId>util</artifactId>
          <version>${lapps.util}</version>
      </dependency>
      <dependency>
          <groupId>org.anc.lapps</groupId>
          <artifactId>serialization</artifactId>
          <version>${serialization.version}</version>
      </dependency>
      <dependency>
          <groupId>org.lappsgrid</groupId>
          <artifactId>vocabulary</artifactId>
          <version>${vocabulary.version}</version>
      </dependency>
      <dependency>
          <groupId>org.lappsgrid</groupId>
          <artifactId>service-grid-libs</artifactId>
          <version>1.1.0</version>
      </dependency>

      <dependency>
          <groupId>org.lappsgrid</groupId>
          <artifactId>JsonSerialization</artifactId>
          <version>0.0.3</version>
      </dependency>
      <dependency>
          <groupId>org.lappsgrid</groupId>
          <artifactId>pycaller</artifactId>
          <version>0.0.4</version>
      </dependency>
      <dependency>
          <groupId>org.spark-project</groupId>
          <artifactId>pyrolite</artifactId>
          <version>2.0.1</version>
      </dependency>
      <dependency>
          <groupId>org.slf4j</groupId>
          <artifactId>slf4j-simple</artifactId>
          <version>1.6.4</version>
      </dependency>

      <!-- JSON dependencies -->
      <dependency>
          <groupId>junit</groupId>
          <artifactId>junit</artifactId>
         <version>4.8.1</version>
         <scope>test</scope>
      </dependency>
  </dependencies>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<version>2.7.2</version>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=512m</argLine>
					<!-- mvn test: java.lang.OutOfMemoryError: Java heap space -->
				</configuration>
			</plugin> 
			<plugin>
				<groupId>org.mortbay.jetty</groupId>
				<artifactId>maven-jetty-plugin</artifactId>
				<version>6.1.10</version>
				<configuration>
					<scanIntervalSeconds>10</scanIntervalSeconds>
					<connectors>
						<connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
							<port>4040</port>
							<maxIdleTime>60000</maxIdleTime>
						</connector>
					</connectors>
				</configuration>
			</plugin>
		</plugins>
	</build>



    <repositories>
        <repository>
            <id>thirdparty</id>
            <url>http://eldrad.cs-i.brandeis.edu:6061/nexus/content/repositories/thirdparty</url>
        </repository>
        <repository>
            <id>anc-releases</id>
            <url>http://www.anc.org:8080/nexus/content/repositories/releases/</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>anc-snapshots</id>
            <url>http://www.anc.org:8080/nexus/content/repositories/snapshots/</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
                <updatePolicy>always</updatePolicy>
            </snapshots>
        </repository>
        <!-- Repositories below this point will likely be phased out. -->
        <repository>
            <id>anc-dev-release</id>
            <name>ANC Release Repository</name>
            <url>http://www.anc.org/maven/release</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>anc-dev-3rdparty</id>
            <name>ANC External Dependency Repository</name>
            <url>http://www.anc.org/maven/thirdparty</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>anc-dev-snaphot</id>
            <name>ANC Snapshot Repository</name>
            <url>http://www.anc.org/maven/snapshot</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
                <updatePolicy>always</updatePolicy>
            </snapshots>
        </repository>
    </repositories>
</project>
